--- a/party/pom.xml
+++ b/party/pom.xml
@@ -59,8 +59,8 @@
         <version.war.plugin>2.1.1</version.war.plugin>
 
         <!-- maven-compiler-plugin -->
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
     </properties>
 
 
@@ -88,6 +88,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+         
         </dependencies>
     </dependencyManagement>
 
@@ -198,7 +199,12 @@
             <artifactId>arquillian-protocol-servlet</artifactId>
             <scope>test</scope>
         </dependency>
-
+	
+		 <dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r05</version>
+		</dependency>
     </dependencies>
 
     <build>
