--- a/party/pom.xml
+++ b/party/pom.xml
@@ -88,6 +88,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+	            <groupId>org.jboss.resteasy</groupId>
+	            <artifactId>resteasy-bom</artifactId>
+	            <version>3.0.6.Final</version>
+	            <scope>import</scope>
+            	<type>pom</type>
+	        </dependency>
          
         </dependencies>
     </dependencyManagement>
@@ -212,6 +219,26 @@
 			<artifactId>guava</artifactId>
 			<version>r05</version>
 		</dependency>
+		<!-- ViolationReport und ResteasyConstraintViolation -->
+		<dependency>
+	        <groupId>org.jboss.resteasy</groupId>
+	        <artifactId>resteasy-jaxrs</artifactId>
+	        <scope>provided</scope>
+	    </dependency>
+	     <dependency>
+	        <groupId>org.jboss.resteasy</groupId>
+	        <artifactId>resteasy-validator-provider-11</artifactId>
+        	<scope>provided</scope>
+	    </dependency>
+	    <!-- ========================================================================================= -->
+		<!-- J A X B                                                                                   -->
+		<!-- ========================================================================================= -->
+		<dependency>
+			<groupId>org.jboss.spec.javax.xml.bind</groupId>
+			<artifactId>jboss-jaxb-api_2.2_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
+	   
     </dependencies>
 
     <build>
