Methoden eingebaut um zu einer Party alle Teilnehmer nach Teilnahme-Status auszulesen (OFFEN, ZUGESAGT, ABGESAGT)
Party anlegen ohne PartyItems und Teilnehmer funktioniert. Folgende
Validierungen werden vorgenommen:

- Veranstalter-ID muss übergeben werden
- DB wird nach Veranstalter-ID durchsucht, ob dieser auch wirklich
exisitert --> Bad Request falls nicht
- Datum in der Zukunft

Im Response Header wird die URI zur neu angelegten Party übermittelt.

Beispielhafter Request:

{
    "id":1,
    "titel":"TEST STATUS OFFEN",
    "beschreibung":"WG-Party zu Halloween",
    "datum":1446188400000,
    "uhrzeit":"20:00",
    "veranstalter":{
    "id":1}
}

--- a/party/src/main/resources/ValidationMessages.properties
+++ b/party/src/main/resources/ValidationMessages.properties
@@ -1,4 +1,6 @@
 nutzerverwaltung.email.notNull=Die Email muss vergeben werden\!
+party.datum.future=Das Datum f\u00FCr die Party muss in der Zukunft liegen\!
+party.veranstalter.notNull=Eine Party muss einen Veranstalter haben\!
 nutzerverwaltung.email.invalid=EMail invalide. Valide Form\: valid@validEmail.de
 nutzerverwaltung.nachname.notNull=Bitte den Nachnamen eintragen.
 nutzerverwaltung.vorname.notNull=Bitte auch den Vornamen eintragen.
